2015-05-08  Timo Pollmeier <timo.pollmeier@greenbone.net>

	Backport r22285.

	* src/gsad_omp.c (get_task): Get the Alerts and Target of the Task.

	* src/html/classic/omp.xsl (task [details]): Set parameter "related"
	of resource-permissions-window template call.
	(html-create-permission-form): Add list of links to related resources.

	* src/html/classic/omp.xsl (new_permission.html): Add related resources
	for Tasks and sentence about the list of related resources.

2015-05-08  Timo Pollmeier <timo.pollmeier@greenbone.net>

	Backport r22206.

	* src/html/classic/omp.xsl (task [details], report, task)
	(result-details, result [result-row], report [section-list]): Add
	min_qod to links to other Task, Report or Result pages.

2015-05-07  Timo Pollmeier <timo.pollmeier@greenbone.net>

	Backport r22305.

	* src/html/classic/omp.xsl (report [hosts]): Add "host=" to filter
	column for selecting the host in auth icons.

2015-05-07  Timo Pollmeier <timo.pollmeier@greenbone.net>

	Backport r22304.

	* src/html/classic/omp.xsl (host, report [assets], report-ports-link):
	Make search phrase for selecting host exact in Report links.

2015-05-07  Matthew Mundell <matthew.mundell@greenbone.net>

	Backport r22302.

	* src/gsad.c (main): Set the parent death signal to SIGKILL in the
	redirect child.  This ensures that the child gets a SIGKILL when the
	parent does.

2015-05-05  Matthew Mundell <matthew.mundell@greenbone.net>

	Backport r22281.

	* src/html/classic/gsad.xsl (login_page): Correct typo in enctype, to
	prevent form text from being escaped.  This was preventing login with
	passwords that contain a space, for example.

2015-05-04  Hani Benhabiles <hani.benhabiles@greenbone.net>

	Backport r22273.

	* src/gsad.c (main): Add --no-redirect option. Make --redirect the
	default behaviour.

2015-04-30  Michael Wiegand <michael.wiegand@greenbone.net>

	Post release version bump.

	* src/html/classic/help.xsl, CMakeLists.txt: Set version to 6.0.3.
